force-app/main/default/objects/Appointment__c/fields/Appointment_Request__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Request__c</fullName>
    <label>Appointment Request</label>
    <referenceTo>Appointment_Request__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>