force-app/main/default/objects/Appointment__c/fields/Reference_Email__c.field-meta.xml
<CustomField>
    <fullName>Reference_Email__c</fullName>
    <description>It gets populated when the appointment is created. It is used by email alerts</description>
    <label>Reference Email</label>
    <type>Email</type>
</CustomField>