force-app/main/default/objects/Appointment__c/fields/Reference_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Name__c</fullName>
    <formula>Appointment_Request__r.Reference_First_Name__c + &apos; &apos;+ Appointment_Request__r.Reference_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Name</label>
    <type>Text</type>
</CustomField>