force-app/main/default/objects/Appointment__c/fields/Reference_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Phone_Number__c</fullName>
    <formula>Appointment_Request__r.Reference_Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Phone Number</label>
    <type>Text</type>
</CustomField>