force-app/main/default/objects/Appointment__c/fields/Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Time_Slot__c</fullName>
    <label>Time Slot</label>
    <type>MasterDetail</type>
    <referenceTo>Time_Slot__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
</CustomField>