force-app/main/default/objects/Appointment__c/fields/Volunteer_Email__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Email__c</fullName>
    <description>It gets populated when the appointment is created. Used by email alerts</description>
    <label>Volunteer Email</label>
    <type>Email</type>
</CustomField>