force-app/main/default/objects/Appointment__c/fields/Volunteer_Name__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Name__c</fullName>
    <formula>Appointment_Request__r.Volunteer__r.FirstName + &apos; &apos;+ Appointment_Request__r.Volunteer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Name</label>
    <type>Text</type>
</CustomField>